complete the documentation